# keccak-rust

./: Cargo.toml  README.md
benches/: benches.rs
src/: keccak_f.rs  lib.rs  sponge.rs
tests/: tests.rs
